@@ -1,11 +1,10 @@
-package com.invoicesync.shared.config;
+package com.invoicesync.config;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.data.domain.AuditorAware;
 import org.springframework.http.HttpHeaders;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -18,16 +17,14 @@ import lombok.RequiredArgsConstructor;
 public class BeansConfig {
 
   @Bean
-  public AuditorAware<String> auditorAware() {
-    return new ApplicationAuditAware();
-  }
-
-  @Bean
   public CorsFilter corsFilter() {
     final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     final CorsConfiguration config = new CorsConfiguration();
     config.setAllowCredentials(true);
-    config.setAllowedOrigins(Collections.singletonList("http://localhost:4200"));
+    config.setAllowedOrigins(List.of(
+        "http://localhost:4200",
+        "https://dex.uctovnictvonitra.sk"
+    ));
     config.setAllowedHeaders(Arrays.asList(
         HttpHeaders.ORIGIN,
         HttpHeaders.CONTENT_TYPE,
@@ -40,8 +37,12 @@ public class BeansConfig {
         "DELETE",
         "PUT",
         "PATCH",
-        "OPTIONS" // ← sem pridaj OPTIONS
+        "OPTIONS"
     ));
+
+    config.setExposedHeaders(List.of("Set-Cookie"));
+    config.setMaxAge(3600L);
+
     source.registerCorsConfiguration("/**", config);
     return new CorsFilter(source);
   }
